better spacing for cards, fix for plotly extra X space

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -9,6 +9,7 @@ html, body {
     color: #f2f2f2;
     width: 100%;
     text-align: center;
+    overflow-x: hidden;
 }
 
 /* text */
@@ -18,6 +19,7 @@ h1 {
 strong, a {
     color: orange;
     margin: 3px 0;
+    text-transform: capitalize;
 }
 .library-stats p {
     margin: 5px 25px;
@@ -50,7 +52,7 @@ h3 {
     border-radius: 5px;
     margin: 20px;
     padding: 5px;
-    flex-grow: 2;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     align-items: stretch;
@@ -74,10 +76,19 @@ h3 {
     border-radius: 0 0 5px 5px;
     height: 100%;
 }
+.card.half {
+    flex-grow: 0;
+    flex-shrink: 1;
+    width: 48%;
+}
+.card.full {
+    max-width: 98%;
+}
 
 /* layout */
 .row {
     display: flex;
+    flex-grow: 0;
     flex-direction: row;
     justify-content: space-evenly;
     margin: 10px 0;
@@ -85,13 +96,10 @@ h3 {
 .library-stats .content .row {
     justify-content: center;
 }
-.row p {
+.library-info .card p {
     min-width: 30%;
     margin: 0 10px;
     line-height: 24px;
-}
-.full .chart {
-    min-width: 98%;
 }
 
 /* controls */
@@ -145,9 +153,12 @@ h3 {
     color:#f2f2f2;
     margin:10px;
     display:inline-block;
+    min-height:500px;
+    margin: 0 auto;
+    min-width: 98%;
 }
-.full .chart {
-    min-height:450px;
+#items-by-rating.chart {
+    min-height:500px;
 }
 .chart svg {
     position: relative;
@@ -227,6 +238,34 @@ h3 {
 .items-by-container .c3-tooltip tr:first-child {
     text-transform: uppercase;
 }
+
+/* scatter chart */
+.js-plotly-plot .plotly .modebar {
+    position: relative;
+    left: 45%;
+    top: 45px;
+    background: #222;
+}
+.legend {
+    margin-top: -20px;
+}
+.legend p {
+    display: inline-block;
+    margin: 0 auto;
+}
+.legend p span {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 5px 10px;
+    border-radius: 25%;
+    height: 10px;
+    width: 10px;
+    background: #D62828;
+}
+.legend p span.watched {
+    background: #F75C03;
+}
+
 /* sweet loading spinner from css-tricks */
 .loader {
     width: 40px;/* the size */
